<resources>
    <string name="app_name">LaunchLearn</string>
    <string name="blog">公众号</string>
    <string name="project_type">项目分类</string>
    <string name="tool">工具</string>
    <string name="collect">收藏</string>
    <string name="about">关于</string>
    <string name="ext">退出登录</string>
    <string name="search_article">搜索</string>
    <string name="is_loading">正在加载...</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_psw">请输入密码</string>
</resources>
