<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blog"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/blog" />

        <item
            android:id="@+id/nav_project_type"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/project_type" />

        <item
            android:id="@+id/nav_tool"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/tool" />

        <item
            android:id="@+id/nav_collect"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/collect" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/ext" />
    </group>
</menu>